<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipesRowLayout"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rowCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/recipe_image"/>

            <TextView
                android:id="@+id/titleTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/recipes_title"
                android:maxLines="2"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipeImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/recipes_description"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/titleTxtView"
                app:layout_constraintStart_toStartOf="@+id/titleTxtView"
                app:layout_constraintTop_toBottomOf="@+id/titleTxtView" />

            <ImageView
                android:id="@+id/heartImgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipeImageView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTxtView"
                app:srcCompat="@drawable/ic_heart"
                app:tint="@color/red"
                android:contentDescription="@string/recipe_favorite"/>

            <TextView
                android:id="@+id/heartTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_100"
                android:textColor="@color/red"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/heartImgView"
                app:layout_constraintStart_toStartOf="@+id/descriptionTxtView"
                app:layout_constraintTop_toBottomOf="@+id/heartImgView" />

            <ImageView
                android:id="@+id/clockImgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heartImgView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTxtView"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/yellow"
                android:contentDescription="@string/recipe_time"/>

            <TextView
                android:id="@+id/clockTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_100"
                android:textColor="@color/yellow"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/clockImgView"
                app:layout_constraintStart_toStartOf="@+id/clockImgView"
                app:layout_constraintTop_toBottomOf="@+id/clockImgView" />

            <ImageView
                android:id="@+id/leafImgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/clockImgView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTxtView"
                app:srcCompat="@drawable/ic_leaf"
                app:tint="@color/green"
                android:contentDescription="@string/recipe_leaf"/>

            <TextView
                android:id="@+id/leafTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/green"
                android:text="@string/_100"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/leafImgView"
                app:layout_constraintStart_toStartOf="@+id/leafImgView"
                app:layout_constraintTop_toBottomOf="@+id/leafImgView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>